<resources>
    <string name="app_name">StudyMore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loading">Vui lòng chờ...</string>
    <string name="notification">Thông báo</string>

    <string name="txt_phone_number">Số điện thoại</string>
    <string name="txt_kind_sim">Viettel</string>
    <string name="txt_email">Email</string>
    <string name="txt_kind_email">Personal</string>
    <string name="txt_location1">Địa chỉ</string>
    <string name="txt_kind_location">Home</string>

    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_lock">Lock</string>

    <string name="birthday">Birthday</string>
    <string name="txt_birthday">Ngày sinh</string>

    <string name="event">Event</string>
    <string name="event1">Đi làm</string>

    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="personal_title">Personal</string>

    <string name="input_email_register">Nhập Email Đăng Ký</string>
    <string name="input_pass">Nhập Mật Khẩu</string>
    <string name="input_pass1">Nhập Lại Mật Khẩu</string>
    <string name="note_register">Vui lòng đăng ký với email mà bạn sử dụng để xác nhận và tránh các sự cố về tài khoản!</string>
    <string name="backtologin">Quay Lại</string>
    <string name="register_account">Đăng Ký Tài Khoản</string>
    <string name="forget_pass">Quên Mật Khẩu?</string>
    <string name="input_email">Nhập Email</string>
    <string name="login_title">Đăng Nhập</string>
    <string name="fblogin">Đăng Nhập FaceBook</string>
    <string name="register_new">Đăng Ký</string>
    <string name="verifiation">Truy cập Email để xác thực tài khoản</string>
    <string name="email_error">Email không đúng định dạng!</string>
    <string name="pass_error">Mật khẩu quá ngắn!</string>
    <string name="msg_login_success">Đăng nhập thành công!</string>

    <string name="gender">Giới tính</string>
    <string name="description1a">StudyMore giúp bạn</string>
    <string name="description1b">dễ dàng tìm gia sư hơn...</string>
    <string name="description2a">...dễ dàng tìm bạn học nhóm hơn.</string>
    <string name="description2b">Và tất cả điều đó giúp bạn...</string>
    <string name="description3b">Chúc bạn thành công</string>
    <string name="description3a">...đạt kết quả học tập tốt hơn.</string>
    <string name="passconfirm_error">Mật khẩu không khớp!</string>
    <string name="logging">Đang đăng nhập...</string>
    <string name="facebook_login_failed">Đăng nhập thất bại!</string>
    <string name="facebook_registed">Đăng nhập lại!</string>
    <string name="empty">Trống</string>
    <string name="username">Username</string>
    <string name="txt_subject">Tiêu đề</string>
    <string name="description">Mô tả</string>

    <string name="large_text">
    "Material is the metaphor.\n\n"

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"</string>

    <string name="address_form">Địa điểm</string>
    <string name="phone_form">Điện thoại liên hệ</string>
    <string name="fee_form">Học phí dự kiến</string>

    <string name="facebook_app_id">1731542087702141</string>
    <string name="fb_login_protocol_scheme">fb1731542087702141</string>
    <string name="facebook_client_token">ac6d2856a6dd8eb29b956657e7ca8a88</string>
</resources>
