<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_start_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_very_large">

    <LinearLayout
        android:id="@+id/ln_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="82dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1"
                android:textSize="@dimen/sizeNormalText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_very_large"
            android:hint="@string/input_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/sizeNormalText" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_very_large"
            android:background="@drawable/btn_login_background"
            android:text="@string/login_title"
            android:textColor="@color/white" />

        <FrameLayout
            android:id="@+id/fl_login_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_very_large">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_fb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_fb_custom_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/com_facebook_button_background"
                android:text="@string/fblogin"
                android:textColor="@color/white" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_very_large"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/register_new"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/padding_large"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forget_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/forget_pass"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>