<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_post"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    android:descendantFocusability="blocksDescendants"
    android:paddingBottom="@dimen/padding_large"
    android:paddingLeft="@dimen/padding_very_large"
    android:paddingRight="@dimen/padding_very_large"
    android:paddingTop="@dimen/padding_large">

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/img_delete"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_delete_red"
            android:checked="false"
            android:contentDescription="@string/app_name"
            android:textOff=""
            android:textOn="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img_delete"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_title"
                android:maxLines="1"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:text="@string/txt_subject"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeNormalText" />

            <TextView
                android:id="@+id/content_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:maxLines="5"
                android:text="@string/large_text"
                android:textSize="@dimen/sizeNormalText" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>